# haskell-cli-starter

./: README.md  template.toml
{{ project_name }}/: flake.nix  {{ project_name }}.cabal
{{ project_name }}/app/: Main.hs
{{ project_name }}/src/: {{ project_module | default(value="WillBeDeleted") }}.hs
{{ project_name }}/test/: Spec.hs  {{ project_module | default(value="WillBeDeleted") }}Spec.hs
{{ project_name }}/test/Mock/: {{ project_module | default(value="WillBeDeleted") }}.hs
